--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,9 @@ p {
 	width: 100%;
 	height: 300px;
 	overflow: hidden;
+	background-image: url("/img/cover.png");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 #description-section {
@@ -122,6 +125,7 @@ p {
 }
 
 .version-tag           { background-color: #00aa33; }
+.spoiler-tag { background-color: #000000; }
 .difficulty-tag-easy   { background-color: #ffce7f; } /*ffb29b*/
 .difficulty-tag-medium { background-color: #ff9047; } /*ff7f59*/
 .difficulty-tag-hard   { background-color: #f94b16; } /*f94b16*/
@@ -171,7 +175,6 @@ p {
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
 }
 
 .tooltip .tooltip-text {
