--- a/css/main.css
+++ b/css/main.css
@@ -50,10 +50,18 @@ p {
 	background-color: #e2e2e2;
 }
 
+#controls-section {
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	margin-top: 20px;
+	text-align: center;
+}
+
 #maps-section {
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
+	margin-top: 20px;
 	width: 70%;
 }
 
@@ -126,6 +134,7 @@ p {
 
 .version-tag           { background-color: #00aa33; }
 .spoiler-tag { background-color: #000000; }
+.star-tag { background-color: transparent; color: #cd13dd; }
 .difficulty-tag-easy   { background-color: #ffce7f; } /*ffb29b*/
 .difficulty-tag-medium { background-color: #ff9047; } /*ff7f59*/
 .difficulty-tag-hard   { background-color: #f94b16; } /*f94b16*/
@@ -144,7 +153,7 @@ p {
 
 .tag-list-header {
 	display: inline-block;
-	width: 100px;
+	width: 115px;
 	font-weight: bold;
 	color: #000000;
 }
