--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 
 body {
-	font-family: "Lato";
+	font-family: "Lato", sans-serif;
 	margin: 0;
 	background-color: #f0f0f0;
 	color: #222222;
@@ -22,17 +22,13 @@ p { margin-top: 0; }
 
 a { color: #62aad1; }
 
-ul {
-	margin: 0;
-}
-
 #navbar {
 	height: 50px;
 	line-height: 50px;
 	width: 100%;
 	background-color: #222222;
 	padding: 10px 30px;
-	font-family: "Roboto Slab";
+	font-family: "Roboto Slab", serif;
 	font-size: 25px;
 	font-weight: bold;
 	color: #fdfdfd;
@@ -46,7 +42,7 @@ ul {
 }
 
 #navbar-subtitle {
-	font-family: "Lato";
+	font-family: "Lato", sans-serif;
 	display: inline-block;
 	margin-left: 10px;
 	font-size: 15px;
@@ -93,7 +89,7 @@ ul {
 	border-radius: 10px;
 	text-align: center;
 	padding: 9px;
-	font-family: "Roboto Slab";
+	font-family: "Roboto Slab", serif;
 	font-size: 15px;
 }
 
@@ -102,10 +98,10 @@ ul {
 	font-weight: bold;
 }
 
-.button-primary { background-color: #4289f4; }
+.button-primary       { background-color: #4289f4; }
 .button-primary:hover { background-color: #3269bc; }
 
-.button-secondary { background-color: #41a3f4; }
+.button-secondary       { background-color: #41a3f4; }
 .button-secondary:hover { background-color: #327bbc; }
 
 .old-downloads {
@@ -122,18 +118,28 @@ ul {
 	text-align: left;
 	outline: none;
 	font-size: 15px;
-	font-family: "Roboto Slab";
+	font-family: "Roboto Slab", serif;
 }
 
+/* Alternate colors for the collapsible sections */
 #maps-section .collapsible:nth-child(2n+1) { background-color: #e2e2e2; }
 #maps-section .collapsible:nth-child(4n+1) { background-color: #d0d0d0; }
 #maps-section .collapsible:nth-child(2n+1):hover,
 #maps-section .collapsible:nth-child(4n+1):hover { background-color: #222222;  color: #fdfdfd; text-decoration: underline; }
 
+/* Round the top and bottom collapsible sections. If the bottom collapsible is
+ * expanded, don't round it, just its expanded content.
+ */
+#maps-section .collapsible:first-child { border-radius: 20px 20px 0 0; }
+#maps-section .collapsible:nth-last-child(2):not(.active)  { border-radius: 0 0 20px 20px; }
+#maps-section .collapsible-content:last-child  { border-radius: 0 0 20px 20px; }
+
 .item-title:before {
 	counter-increment: item-num;
 	content: "#" counter(item-num);
-	margin-right: 20px;
+	display: inline-block;
+	width: 50px;
+	/*margin-right: 20px;*/
 }
 
 .item-title {
@@ -155,6 +161,7 @@ ul {
 	background-color: black;
 	border-radius: 10px;
 	text-align: center;
+	font-family: "Roboto Slab", serif;
 }
 
 .mc-version-tag        { background-color: #00aa33; }
@@ -242,6 +249,7 @@ ul {
 
 .tooltip-text ul {
 	text-align: left;
+	margin: 0;
 }
 
 .tooltip-text.changelog {
