--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ body {
 
 footer {
 	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 	margin-top: 100px;
 	padding: 50px;
 	text-align: center;
@@ -21,6 +23,13 @@ footer em { font-style: normal; color: #444444; }
 p { margin-top: 0; }
 
 a { color: #62aad1; }
+
+h2 {
+	text-align: center;
+	font-family: "Roboto Slab", serif;
+	font-weight: bold;
+	font-size: 30px;
+}
 
 #navbar {
 	height: 50px;
@@ -128,8 +137,7 @@ a { color: #62aad1; }
 #maps-section .collapsible:nth-child(4n+1):hover { background-color: #222222;  color: #fdfdfd; text-decoration: underline; }
 
 /* Round the top and bottom collapsible sections. If the bottom collapsible is
- * expanded, don't round it, just its expanded content.
- */
+* expanded, don't round it, just its expanded content. */
 #maps-section .collapsible:first-child { border-radius: 20px 20px 0 0; }
 #maps-section .collapsible:nth-last-child(2):not(.active)  { border-radius: 0 0 20px 20px; }
 #maps-section .collapsible-content:last-child  { border-radius: 0 0 20px 20px; }
@@ -207,44 +215,99 @@ a { color: #62aad1; }
 
 .content-info {
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	width: 50%;
 	float: left;
 	padding: 20px;
 }
 
+#videos-section {
+	width: 70%;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#videos-section a {
+	text-decoration: none;
+}
+
+.video-box {
+	display: inline-block;
+	width: 30%;
+	margin-left: 1.5%;
+	margin-right: 1.5%;
+	margin-bottom: 30px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	background: #bcbcbc;
+	text-align: center;
+	color: #444444;
+}
+
+.video-box:hover {
+	background-color: #444444;
+	cursor: pointer;
+	color: #f0f0f0;
+}
+
+.video-box-title {
+	display: inline-block;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	font-family: "Roboto Slab", serif;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.video-platform-icon {
+	height: 13px;
+	margin-right: 5px;
+}
+
+.video-thumbnail {
+	width: 100%;
+	display: block;
+}
+
+#leaderboard-section {
+	margin-top: 50px;
+}
+
 .tooltip {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 .tooltip .tooltip-text {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 150%;
-  left: 50%;
-  margin-left: -60px;
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	z-index: 1;
+	bottom: 150%;
+	left: 50%;
+	margin-left: -60px;
 }
 
 .tooltip .tooltip-text::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: black transparent transparent transparent;
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: black transparent transparent transparent;
 }
 
 .tooltip:hover .tooltip-text {
-  visibility: visible;
+	visibility: visible;
 }
 
 .tooltip-text ul {
